# bitcode

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  bitlang  grammar.txt  test.vmbc
src/: logger.c  main.c
src/assembler/: assembler_context.c
src/assembler/lexer/: lexer.c
src/assembler/parser/: parser.c
src/include/: arena_allocator.h  assembler_context.h  assembler_utils.h  instruction_format_table.h  lexer.h  logger.h  opcodes.h  parser.h  registers.h  symbol_table.h  token_stream.h  vm.h  vm_utils.h
src/lexer/: lexer.c
src/parser/: parser.c
src/utils/arena_allocator/: arena_allocator.c
src/utils/assembler_utils/: assembler_utils.c  opcodes.c
src/utils/logger/: logger.c
src/utils/symbol_table/: symbol_table.c
src/utils/token_stream/: token_stream.c
src/vm/: instruction_format_table.c  opcodes.c  registers.c  vm.c
src/vm/vm_utils/: vm_utils.c
tests/: test_common.c  test_common.h  test_decoder.c  test_lexer.c  test_main.c  test_vm.c
tests/assembler/lexer/: test_lexer.c
tests/assembler/parser/: test_parser.c
tests/include/: test_common.h
tests/vm/: test_decoder.c
